feat: 完成任务6下载功能测试及前期测试任务
主要更新:
- 完成任务6下载功能测试 (6.1-6.6全部通过)
- 添加下载功能单元测试 (25个测试用例)
- 添加E2E测试文件 (认证、首页、资源列表、资源详情、下载)
- 完成任务3首页功能测试
- 完成任务4资源列表页测试
- 完成任务5资源详情页测试
- 添加Playwright配置和测试基础设施
- 修复SASS弃用警告
- 添加分类图标资源
- 更新测试报告文档

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "test:coverage": "node --max-old-space-size=8192 --expose-gc ./node_modules/vitest/vitest.mjs --coverage",
     "test:ui": "node --max-old-space-size=8192 --expose-gc ./node_modules/vitest/vitest.mjs --ui",
     "test:batch": "node --max-old-space-size=4096 --expose-gc scripts/run-tests-batch.js",
+    "test:e2e": "npx playwright test",
+    "test:e2e:ui": "npx playwright test --ui",
+    "test:e2e:headed": "npx playwright test --headed",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint:check": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
     "format": "prettier --write src/",
@@ -51,6 +54,7 @@
     "xss": "^1.0.14"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/crypto-js": "^4.2.0",
     "@types/dompurify": "^3.0.5",
     "@types/js-cookie": "^3.0.6",
