feat: 添加VIP支付系统文档和API规范
- 更新 .gitignore 排除证书文件目录
- 添加支付API文档 (API_PAYMENT.md)
- 添加回调URL配置指南
- 添加证书部署指南
- 添加环境配置指南
- 添加常见问题解答
- 添加商户申请指南
- 添加对账异常处理指南
- 添加退款处理指南
- 添加定时任务指南
- 添加安全事件处理指南
- 添加OpenAPI规范文件
- 更新沙箱测试指南
- 更新VIP支付系统任务进度

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@ dist-ssr
 
 # Allow .env.example template
 !.env.example
+
+# Certificates - 证书文件不要提交到代码仓库
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+certs/
+backend/certs/
+**/certs/
