feat: 添加短信验证、资源审核、通知系统等功能
主要更新:
- 短信验证服务: 支持阿里云/腾讯云/Twilio多服务商，含频率限制和验证码存储
- 资源审核系统: 自动审核+人工审核流程，审核日志记录
- 通知系统: 站内通知、审核结果通知
- 分片上传: 大文件分片上传支持
- 预览图提取: 资源预览图自动提取服务
- 积分定价: 资源积分定价功能

安全说明:
- 敏感配置(阿里云API密钥等)通过环境变量配置
- .env文件已被.gitignore忽略，不会提交到仓库
- 仅提交.env.example模板文件供参考

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -460,6 +460,16 @@ SUPPORT_EMAIL=support@example.com
 ICP_NUMBER=
 
 # ============================================
+# 审核模式配置
+# ============================================
+
+# 审核模式（production/development）
+# production: 生产环境，执行完整审核流程（自动审核 → 人工审核）
+# development: 开发环境，自动将 audit_status 设置为 1（审核通过）
+# 默认值: production
+AUDIT_MODE=production
+
+# ============================================
 # 安全配置
 # ============================================
 
