--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@alicloud/dysmsapi20170525": "^4.3.1",
+    "@alicloud/openapi-client": "^0.4.15",
+    "@alicloud/tea-util": "^1.4.11",
     "@prisma/client": "^5.22.0",
+    "@types/adm-zip": "^0.5.7",
+    "adm-zip": "^0.5.16",
+    "ag-psd": "^29.0.0",
     "alipay-sdk": "^4.14.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
@@ -59,14 +65,17 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
     "@types/node-cron": "^3.0.11",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
+    "fast-check": "^4.5.2",
     "jest": "^30.2.0",
     "prettier": "^3.1.1",
     "prisma": "^5.22.0",
     "ts-jest": "^29.4.6",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^4.0.16"
   }
 }
